fixex some tests deprecations